<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyMusic</string>
    <string name="settings_desc">请输入 MyMusic 服务器地址，App 将加载该站点。\n例如：http://192.168.1.100:8080 或 https://music.example.com</string>
    <string name="url_hint">http://服务器IP:8080</string>
    <string name="save_and_enter">保存并进入</string>
    <string name="invalid_url">请输入有效的地址</string>
    <string name="load_failed">无法连接服务器：\n%s\n\n请检查网络或服务器是否在线</string>
    <string name="retry">重新加载</string>
    <string name="change_server">修改服务器地址</string>
    <string name="pick_file">选择文件</string>
</resources>
